# asp_dot_rust

./: .gitignore  Cargo.toml  LICENSE-GPL-3.0  README.md  build.rs  expanded.rs  rustfmt.toml
asp_dot_rust_macros/: Cargo.toml  LICENSE
asp_dot_rust_macros/src/: lib.rs
changelog/main_0_0.1.0_14062026/: http2.txt
changelog/main_0_loger_14062026/: http1_auto.txt
changelog/main_2_0.1.1_14062026/: http1_auto.txt  http2.txt
src/: lib.rs
src/application/: application.rs  application_shared.rs  builder.rs  mod.rs
src/configuration/: cors_config.rs  get_client_ip_config.rs  hyper_config.rs  jwt_auth_config.rs  mod.rs  rate_limit_config.rs  request_timeout_config.rs  static_file_config.rs
src/controller/: app_controller.rs  controller.rs  macro_rules.rs  mod.rs  routing.rs
src/extensions/: join_string.rs  mod.rs  str.rs
src/hosted_service/: application_hosted_service.rs  memory_cache_backgroundservice.rs  mod.rs
src/http_context/: http.rs  http_context.rs  http_header.rs  mod.rs
src/http_listener/: http_listener_server.rs  hyper_server.rs  hyper_service.rs  mod.rs  streaming_body.rs
src/io/: read.rs  write.rs
src/logging/: log_level.rs  logger.rs  loginfo.rs  mod.rs
src/middleware/: app_middlewares.rs  authorize.rs  auto_route.rs  cors.rs  middleware_service.rs  mod.rs  pipeline.rs  rate_limit.rs  request_timeout.rs  static_file.rs
src/service_provider/: application_scope.rs  http_request_scope.rs  mod.rs
src/services/: mod.rs
src/tcp/: mod.rs  parser.rs
src/threading/: mod.rs  (+3 more)
tests/: test_application.rs  test_hyper_streaming.rs  test_performance.rs  test_streaming.rs
(+39 files in other folders)
