[package]
name = "asp_dot_rust"
version = "0.1.0"
edition = "2024"
authors = ["kourain <maiquyen16503@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "hardcode a web framework look at ASP.NET Core API"
readme = "README.md"

[build-dependencies]
chrono = "0.4"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
colored = "3.1.1"
futures = "0.3.32"
inventory = "0.3.24"
matchit = "0.9.2"
memchr = "2.7"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v7"] }
urlencoding = "2.1.3"
http = "1.4.0"

asp_dot_rust_macros = { path = "asp_dot_rust_macros" }
socket2 = "0.6.3"
tower = "0.5.3"
